# cppcolormap

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .readthedocsenv.yml  .travis.yml  CMakeLists.txt  README.md  cppcolormap.h  cppcolormap.pc.in  cppcolormapConfig.cmake  cppcolormapConfig.cmake.in  cppcolormap_8h.html  cppcolormap_8h.js  cppcolormap_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  environment.yaml  files.html  files_dup.js  globals.html  globals_defs.html  index.html  menudata.js  namespacecppcolormap_1_1array__type.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  navtreedata.js  navtreeindex0.js  pyproject.toml  python_interface.cpp  setup.py
.github/workflows/: ci.yml  gh-pages.yml  pages.yml  pre-commit.yml
docs/: Doxyfile  api_cpp.rst  api_python.rst  changelog.rst  conf.py  doxy_landing.md  environment.yaml  index.rst
docs/doxystyle/: custom.css  doxygen-awesome-fancy-scrollbars.css  doxygen-awesome.css
examples/: match.py
examples/cpp/: CMakeLists.txt  match.cpp
examples/overview/: order_dvips.py  overview.py  trim.sh
examples/python/: match.py
include/: cppcolormap.h  python.cpp
python/: main.cpp  python_interface.cpp  setup.py
python/cppcolormap/: __init__.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_15.js  functions_2.js  functions_3.js  functions_4.js  (+15 more)
src/: CMakeLists.txt  cppcolormap.h  cppcolormapConfig.cmake.in
test/cpp/: CMakeLists.txt  main.cpp
test/python/: main.py
tests/cpp/: CMakeLists.txt  main.cpp
tests/python/: main.py
